examples/invalid/semantics/redeclare_same_scope.aru
module examples.invalid.semantics.redeclareSameScope

func main() {
    count = 1

    // expected: semantic error; `count` is already declared in this scope.
    count = 2
}
